# Finite-Element-Domain-Decomposition

./: README.md
cpluplus/: .cproject  .project  CMakeLists.txt  slurm-2108835.out  slurm-2112042.out
cpluplus/cmake/: FindGBench.cmake
cpluplus/parallel/: Parallel_CGM.cpp  Parallel_CGM.h  Serial_CGM.cpp  Serial_CGM.h  main.cpp
cpluplus/scripts/: autogeogen.m  autogeogen_forTraditionialSerial.m  batch_script_mesh_quality.slurm  batch_script_nproc_mesh.slurm  geogen.m  parallel_draw_script.m  ploting_script.m  serial_draw_script.m
cpluplus/serial/: Serial_CGM.cpp  Serial_CGM.h  main.cpp
cpluplus/writeup/: benchmark_mpi_openmp.txt  benchmark_mpi_openmp_4dm.txt  benchmark_serial.txt  benchmark_serial_more.txt
cpluplus/writeup/backups/: benchmark_mpi_openmp_4dm_.txt  benchmark_serial_more_.txt
matlab project/logistics/: naive_fe_ddm.stl
matlab/srcs/: C1_FEM_CGM.m  C2_FEM_DDM_ASM.m  C3_FEM_DDM_PCG.m  Main_Pre_Post_Processing.m
